--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> 
+    <link href="httaps://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet"> 
     <script src="jquery-3.6.0.slim.min.js"></script>
     <script src="script.js"></script>
 
@@ -37,7 +37,7 @@
 
     <!-- Header by RADHA -->
     <div class="header">
-      <img class="header-logo" src="image/20210408_133657_0000-removebg-preview.png" height="100" width="100">
+      <img class="header-logo" src="https://github.com/YelikeWL/explorebabel/blob/main/20210408_133657_0000-removebg-preview.png" height="100" width="100">
       <div class="header-list">
         <ul>
           <li>Home</li>
@@ -53,7 +53,7 @@
         </form>
       </div>
       <div class="headericon">
-        <a><img src="image/iconfinder_menu-alt_134216.png"></a>
+        <a><img src="https://github.com/YelikeWL/explorebabel/blob/main/image/iconfinder_menu-alt_134216.png"></a>
       </div>
 
     </div>
@@ -76,22 +76,22 @@
           <label>Many destinations that can be visited,<br/>have natural beauty and uniqueness of Indonesian culture</label>
           <div class="highlight-items">
               <div class="highlight-card">
-                  <img alt src="image/Pulau Belitung.jpg"/>
+                  <img alt src="https://github.com/YelikeWL/explorebabel/blob/main/image/Pulau%20Belitung.jpg"/>
                   <label>Belitung Island</label>
                   <p>An island in Indonesia that is famous for its Tanjung Tinggi beach, colonial architecture & coral reef snorkeling.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="image/Pulau Bangka.jpg"/>
+                  <img alt src="https://github.com/YelikeWL/explorebabel/blob/main/image/Pulau%20Bangka.jpg"/>
                   <label>Bangka Island</label>
                   <p>An island located east of Sumatra, Indonesia, and included in the province of the Bangka Belitung Islands.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="image/Tanjung kalayang.jpg"/>
+                  <img alt src="https://github.com/YelikeWL/explorebabel/blob/main/image/Tanjung%20kalayang.jpg"/>
                   <label>Tanjung Kelayang Beach</label>
                   <p>A slice of Heaven on the Belitung Peninsula. the giant pile of granite that looked like a bird's head.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="image/pulau-lengkuas.jpg"/>
+                  <img alt src="https://github.com/YelikeWL/explorebabel/blob/main/image/pulau-lengkuas.jpg"/>
                   <label>Lengkuas Island</label>
                   <p>One of the hundreds of islands in Bangka Belitung Province has a high exotic value.</p>
               </div>
@@ -131,7 +131,7 @@
 
     <!-- FOOOTER BY RADHA -->
     <div class="footer">            
-      <img class="footer-logo" src="image/20210408_133657_0000.png" height="150" width="150">            
+      <img class="footer-logo" src="https://github.com/YelikeWL/explorebabel/blob/main/20210408_133657_0000.png" height="150" width="150">            
       <div class="footer-list">            
         <ul>
           <li>visitbabel@gmail.com</li>
