--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                   <p>An island located east of Sumatra, Indonesia, and included in the province of the Bangka Belitung Islands.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="https://github.com/YelikeWL/explorebabel/blob/main/image/Tanjung%20kalayang.jpg"/>
+                  <img alt src="https://www.teropongsenayan.com/foto_berita/202004/01/medium_tscom_news_photo_1585737081.jpg"/>
                   <label>Tanjung Kelayang Beach</label>
                   <p>A slice of Heaven on the Belitung Peninsula. the giant pile of granite that looked like a bird's head.</p>
               </div>
