--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="responsive.css">
 
     <!-- Content's ZOOM ANIMATION -->
-    <link rel="icon" type="image/svg" href="assets/icons/logo-white.svg">
+    <link rel="icon" type="images/svg" href="assets/icons/logo-white.svg">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -37,7 +37,7 @@
 
     <!-- Header by RADHA -->
     <div class="header">
-      <img class="header-logo" src="image/20210408_133657_0000-removebg-preview.png" height="100" width="100">
+      <img class="header-logo" src="images/20210408_133657_0000-removebg-preview.png" height="100" width="100">
       <div class="header-list">
         <ul>
           <li>Home</li>
@@ -53,7 +53,7 @@
         </form>
       </div>
       <div class="headericon">
-        <a><img src="image/iconfinder_menu-alt_134216.png"></a>
+        <a><img src="images/iconfinder_menu-alt_134216.png"></a>
       </div>
 
     </div>
@@ -76,22 +76,22 @@
           <label>Many destinations that can be visited,<br/>have natural beauty and uniqueness of Indonesian culture</label>
           <div class="highlight-items">
               <div class="highlight-card">
-                  <img alt src="image/Pulau Belitung.jpg"/>
+                  <img alt src="images/Pulau Belitung.jpg"/>
                   <label>Belitung Island</label>
                   <p>An island in Indonesia that is famous for its Tanjung Tinggi beach, colonial architecture & coral reef snorkeling.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="image/Pulau Bangka.jpg"/>
+                  <img alt src="images/Pulau Bangka.jpg"/>
                   <label>Bangka Island</label>
                   <p>An island located east of Sumatra, Indonesia, and included in the province of the Bangka Belitung Islands.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="image/Tanjung kalayang.jpg"/>
+                  <img alt src="images/Tanjung kalayang.jpg"/>
                   <label>Tanjung Kelayang Beach</label>
                   <p>A slice of Heaven on the Belitung Peninsula. the giant pile of granite that looked like a bird's head.</p>
               </div>
               <div class="highlight-card">
-                  <img alt src="image/pulau-lengkuas.jpg"/>
+                  <img alt src="images/pulau-lengkuas.jpg"/>
                   <label>Lengkuas Island</label>
                   <p>One of the hundreds of islands in Bangka Belitung Province has a high exotic value.</p>
               </div>
@@ -131,7 +131,7 @@
 
     <!-- FOOOTER BY RADHA -->
     <div class="footer">            
-      <img class="footer-logo" src="https://drive.google.com/file/d/1GqhmkXojsgdMMu66RsRQKFcn_YADazOt/view?usp=sharing" height="150" width="150">            
+      <img class="footer-logo" src="images/20210408_133657_0000" height="150" width="150">            
       <div class="footer-list">            
         <ul>
           <li>visitbabel@gmail.com</li>
