--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <!-- FOOOTER BY RADHA -->
     <div class="footer">            
-      <img class="footer-logo" src="images/20210408_133657_0000" height="150" width="150">            
+      <img class="footer-logo" src="images/20210408_133657_0000.png" height="150" width="150">            
       <div class="footer-list">            
         <ul>
           <li>visitbabel@gmail.com</li>
